--- a/html/AddOwner.html
+++ b/html/AddOwner.html
@@ -134,7 +134,7 @@ o\:*         { behavior: url(#default#VML) }
 					</tr>
 					<tr>
 						<td>
-							<input type="text" name="OWNERNAME" placeholder="NAME *" size="25" maxlength="140" required></span></font>&nbsp;
+							<input type="text" name="OWNERNAME" placeholder="NAME *" size="25" maxlength="140" required oninput="maxLengthCheck(this)"></span></font>&nbsp;
 						</td>
 					<tr>
 						<td>
@@ -144,7 +144,7 @@ o\:*         { behavior: url(#default#VML) }
 					</tr>
 					<tr>
 						<td>
-							<input type="number" name="INCOME" placeholder="INCOME" size="25" maxlength="20"></span></font>&nbsp;
+							<input type="number" name="INCOME" placeholder="INCOME" size="25" maxlength="20" oninput="maxLengthCheck(this)"></span></font>&nbsp;
 						</td>
 					</tr>
 					<tr>
@@ -155,7 +155,7 @@ o\:*         { behavior: url(#default#VML) }
 					</tr>
 					<tr>
 						<td>
-							<input type="text" name="PROFESSION" placeholder="PROFESSION" size="25" min="0" maxlength="140"></span></font>
+							<input type="text" name="PROFESSION" placeholder="PROFESSION" size="25" min="0" maxlength="140" oninput="maxLengthCheck(this)"></span></font>
 							&nbsp;
 						</td>
 					</tr>
