--- a/html/ComputeLoan.html
+++ b/html/ComputeLoan.html
@@ -125,7 +125,7 @@ o\:*         { behavior: url(#default#VML) }
         <table>
           <tr>
             <td>
-              <input type="number" name="loanAmount" placeholder="Loan Amount" min="0" maxlength="20">&nbsp;
+              <input type="number" name="loanAmount" placeholder="Loan Amount" min="0" maxlength="20" oninput="maxLengthCheck(this)">&nbsp;
             </td>
           </tr>
           <tr>
@@ -157,3 +157,10 @@ o\:*         { behavior: url(#default#VML) }
   </body>
 
 </html>
+
+<script>
+ function maxLengthCheck(object) {
+                if (object.value.length > object.maxLength)
+                    object.value = object.value.slice(0, object.maxLength)
+            }
+</script>
