--- a/html/DeleteHome.html
+++ b/html/DeleteHome.html
@@ -124,7 +124,7 @@ o\:*         { behavior: url(#default#VML) }
 			<table>
 				<tr>
 					<td>
-						<input type="number" name="HomeID" placeholder="HOME ID *" min="0" maxlength="40">&nbsp;
+						<input type="number" name="HomeID" placeholder="HOME ID *" min="0" maxlength="40" oninput="maxLengthCheck(this)">&nbsp;
 					</td>
 				</tr>
 			</table>
@@ -161,6 +161,11 @@ o\:*         { behavior: url(#default#VML) }
 			LoadReq = ricci.Characters.Load(CharID, CharACS);
 			return (true);
 		}
+		
+		 function maxLengthCheck(object) {
+                if (object.value.length > object.maxLength)
+                    object.value = object.value.slice(0, object.maxLength)
+            }
 // BY STAR28.com
 	</SCRIPT>
 
