--- a/html/Price.html
+++ b/html/Price.html
@@ -132,7 +132,7 @@ o\:*         { behavior: url(#default#VML) }
 				<table>
 				  <tr>
 					 <td>
-						<input type = "number" name = "price" placeholder="Price" min="0" maxlength="20">&nbsp;
+						<input type = "number" name = "price" placeholder="Price" min="0" maxlength="20" oninput="maxLengthCheck(this)">&nbsp;
 					 </td>
 				   </tr>
 				  </table>
@@ -170,6 +170,11 @@ function LoadLocalAgent(CharID, CharACS) {
 LoadReq = ricci.Characters.Load(CharID, CharACS);
 return(true);
 }
+	
+	 function maxLengthCheck(object) {
+                if (object.value.length > object.maxLength)
+                    object.value = object.value.slice(0, object.maxLength)
+            }
 // BY STAR28.com
 </SCRIPT>
 		   
