--- a/html/Selecthome.html
+++ b/html/Selecthome.html
@@ -132,7 +132,7 @@ o\:*         { behavior: url(#default#VML) }
                 <table>
 					<tr>
 					   <td>
-						  <input type = "number" name = "HOMEID" placeholder="Home ID" min="0" maxlength="40">&nbsp;
+						  <input type = "number" name = "HOMEID" placeholder="Home ID" min="0" maxlength="40" oninput="maxLengthCheck(this)">&nbsp;
 					   </td>
 					 </tr>
 					</table>
@@ -172,6 +172,11 @@ function LoadLocalAgent(CharID, CharACS) {
 LoadReq = ricci.Characters.Load(CharID, CharACS);
 return(true);
 }
+	
+	 function maxLengthCheck(object) {
+                if (object.value.length > object.maxLength)
+                    object.value = object.value.slice(0, object.maxLength)
+            }
 // BY STAR28.com
 </SCRIPT>
 		   
