--- a/html/homesForSale.html
+++ b/html/homesForSale.html
@@ -124,7 +124,7 @@ o\:*         { behavior: url(#default#VML) }
 				<table>
 					<tr>
 						<td>
-							<input type="text" name="CITY" placeholder="City Name" maxlength="100">&nbsp;
+							<input type="text" name="CITY" placeholder="City Name" maxlength="100" oninput="maxLengthCheck(this)">&nbsp;
 						</td>
 					</tr>
 				</table>
@@ -160,6 +160,11 @@ o\:*         { behavior: url(#default#VML) }
 			LoadReq = ricci.Characters.Load(CharID, CharACS);
 			return (true);
 		}
+		
+		 function maxLengthCheck(object) {
+                if (object.value.length > object.maxLength)
+                    object.value = object.value.slice(0, object.maxLength)
+            }
 // BY STAR28.com
 	</SCRIPT>
 
